move email exist check when register to create user method, and remove original email exist check method
